--- a/src/index.css
+++ b/src/index.css
@@ -3,22 +3,31 @@ html {
   box-sizing: border-box;
 }
 
-body, #root {
+body,
+#root {
   height: 100vh;
   margin: 0;
 }
 
-body, input, select, textarea {
+body,
+input,
+select,
+textarea, 
+button {
   font-size: 1.6rem;
   font-family: 'Lexend Deca';
 }
 
 .grid-container {
   display: grid;
-  grid-template-areas: "header" "main" "footer";
+  grid-template-areas: "header""main""footer";
   grid-template-columns: 1fr;
   grid-template-rows: 5rem 1fr 5rem;
   height: 100%;
+}
+
+a {
+  text-decoration: none;
 }
 
 a:hover {
@@ -50,4 +59,80 @@ footer {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.content {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.main-content {
+  flex: 3 60rem;
+}
+
+.sidebar {
+  flex: 1 20rem;
+}
+
+/* PRODUCTS */
+
+.products {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+.products li {
+  flex: 0 1 29rem;
+  height: 47rem;
+  padding: 1rem;
+}
+
+.product {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
+}
+
+.product img {
+  max-width: 37rem;
+  max-height: 37rem;
+}
+
+.product-price {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.product-price div, .product-price button {
+  text-align: center;
+  flex: 1;
+}
+
+.product-price div {
+  font-size: 2rem;
+}
+
+.button {
+  padding: 1rem;
+  border: 0.1rem hsl(0, 0%, 75%) solid;
+  background-color: #f0f0f0;
+  cursor: pointer;
+  border-radius: 6px;
+  color: white;
+}
+
+.button:hover {
+  border: 0.1rem hsl(0, 0%, 21%) solid;
+  color: hsl(0, 63%, 53%);
+}
+
+.button.primary {
+  background-color: hsl(244, 100%, 9%);
 }
